Tests/Good/Fonctions/multiplication.tig
let 
    function multiplication(a:int,b:int):int= 
        a * b
in 
    multiplication(3,4)
end 

    
