Tests/Bad/Fonctions/multiplication.tig
let 
    var res=0
    function multiplication(a:int,b:int)= 
        a * b
in 
    multiplication(3,4)
end 

    
